--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ cryptography==2.6.1
 cwlref-runner==1.0
 cwltool==1.0.20191022103248
 decorator==4.4.1
-Django==2.1.5
+Django==2.2.10
 djangorestframework==3.11.0
 Flask==1.0.2
 future==0.18.2
@@ -61,6 +61,7 @@ selenium==3.141.0
 shellescape==3.4.1
 simplejson==3.16.0
 six==1.12.0
+sqlparse==0.3.1
 typing-extensions==3.7.4.1
 urllib3==1.25.8
 wcwidth==0.1.7
