--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==3.2
 cwlref-runner==1.0
 cwltool==1.0.20191022103248
 decorator==4.4.1
+defusedxml==0.7.1
 Django==2.2.20
 djangorestframework==3.11.0
 Flask==1.0.2
@@ -35,6 +36,7 @@ more-itertools==7.2.0
 multidict==4.5.2
 mypy-extensions==0.4.3
 networkx==2.4
+oauthlib==3.1.0
 packaging==19.1
 pathlib2==2.3.5
 pluggy==0.12.0
@@ -43,16 +45,19 @@ psutil==5.7.0
 py==1.10.0
 pybtex==0.22.2
 pycparser==2.19
+PyJWT==2.0.1
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
 PySocks==1.6.8
 pytest==5.1.2
 python-dateutil==2.8.1
+python3-openid==3.2.0
 pytz==2018.9
 PyYAML==5.4
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.23.0
+requests-oauthlib==1.3.0
 ruamel.yaml==0.16.0
 ruamel.yaml.clib==0.2.0
 scandir==1.10.0
@@ -61,6 +66,8 @@ selenium==3.141.0
 shellescape==3.4.1
 simplejson==3.16.0
 six==1.12.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.3.1
 typing-extensions==3.7.4.1
 urllib3==1.25.8
