--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ cwltool==1.0.20191022103248
 decorator==4.4.1
 defusedxml==0.7.1
 Django==2.2.20
-djangorestframework==3.11.0
+djangorestframework>=3.11.2
 Flask==1.0.2
 future==0.18.2
 humanfriendly==4.18
