--- a/requirements.txt
+++ b/requirements.txt
@@ -11,13 +11,15 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 coloredlogs==10.0
-cryptography>=3.3.2
+cryptography==3.4.7
 cwlref-runner==1.0
 cwltool==1.0.20191022103248
 decorator==4.4.1
 defusedxml==0.7.1
 Django==2.2.20
-djangorestframework>=3.11.2
+djangorestframework==3.12.4
+ecdsa==0.17.0
+flake8==3.9.2
 Flask==1.0.2
 future==0.18.2
 humanfriendly==4.18
@@ -30,6 +32,7 @@ latexcodec==1.0.6
 lockfile==0.12.2
 lxml==4.6.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mistune==0.8.4
 more-itertools==7.2.0
 multidict==4.5.2
@@ -42,14 +45,18 @@ pluggy==0.12.0
 prov==1.5.1
 psycopg2-binary==2.9.1
 py==1.10.0
+pyasn1==0.4.8
 pybtex==0.22.2
+pycodestyle==2.7.0
 pycparser==2.19
+pyflakes==2.3.1
 PyJWT==2.0.1
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
 PySocks==1.6.8
 pytest==5.1.2
 python-dateutil==2.8.1
+python-jose==3.3.0
 python3-openid==3.2.0
 pytz==2018.9
 PyYAML==5.4
@@ -57,6 +64,7 @@ rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.23.0
 requests-oauthlib==1.3.0
+rsa==4.7.2
 ruamel.yaml==0.16.0
 ruamel.yaml.clib==0.2.0
 scandir==1.10.0
