--- a/chart/openbio/templates/ingress.yaml
+++ b/chart/openbio/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.openbio.ingressEnabled }}
 {{- $ingressURL := (required "You must set openbio.ingressURL to the ingress URL used" .Values.openbio.ingressURL) }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}
@@ -20,6 +20,8 @@ spec:
       - path: /
         pathType: Prefix
         backend:
-          serviceName: {{ .Release.Name }}
-          servicePort: 8200
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: 8200
 {{- end }}
