--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -20,6 +20,9 @@ environments:
     - openBio:
         version: 0.2.4
         clientSecret: FR6HjKUVFo4AoJbN56PPC1nvoaQ9XHm3eMQz8pxRKddhJjh8dWCum5AUyKStEFFnkqzH3KWb8Jhal9OhRYCh6JKclYeF9M2TL4oPL95s4M3iArNrE6M8EMqU7lrEDYYD
+        artifacts:
+          accessKey: 4En0yHGi2jInAExZTxSw
+          secretKey: Pn8nJQRsFqiiKRwW2O7RzkQQfdGYRqtGceqcbRor
 ---
 helmfiles:
 - path: git::https://github.com/CARV-ICS-FORTH/knot.git@helmfile.yaml
@@ -33,7 +36,26 @@ helmfiles:
   - knot:
       issuesURL: https://github.com/CARV-ICS-FORTH/knot/issues
       localImage: false
+repositories:
+- name: minio
+  url: https://charts.min.io/
 releases:
+- name: openbio-artifacts
+  namespace: openbio
+  createNamespace: true
+  chart: minio/minio
+  values:
+  - fullnameOverride: openbio-artifacts
+  - mode: standalone
+  - rootUser: {{ .Values.openBio.artifacts.accessKey }}
+  - rootPassword: {{ .Values.openBio.artifacts.secretKey }}
+  - consoleIngress:
+      enabled: true
+      annotations:
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      hosts:
+      - openbio-artifacts.{{ .Values.ingress.host }}
+  - resources:
 - name: openbio
   namespace: openbio
   createNamespace: true
@@ -61,6 +83,7 @@ releases:
       {{- if .Values.ingress.createSelfsignedCertificate }}
       knotVerifySSL: false
       {{- end }}
+      argoArtifactRepositoryURL: s3://{{ .Values.openBio.artifacts.accessKey }}:{{ .Values.openBio.artifacts.secretKey }}@openbio-artifacts.openbio.svc:9000
       ingressEnabled: true
       ingressURL: https://openbio.{{ .Values.ingress.host }}
 {{- if not .Values.storage.stateVolume.hostPath }}
