--- a/chart/openbio/templates/configmap.yaml
+++ b/chart/openbio/templates/configmap.yaml
@@ -54,7 +54,7 @@ data:
     LOGIN_BACKEND = KnotConnect.name
     {{- end }}
 
-    ARGO_ARTIFACT_REPOSITORY_URL = {{ .Values.openbio.argoArtifactRepositoryURL }}
+    ARGO_ARTIFACT_REPOSITORY_URL = {{ .Values.openbio.argoArtifactRepositoryURL | quote }}
 
     {{- if .Values.openbio.extraSettings }}
     {{- .Values.openbio.extraSettings | nindent 4 }}
