New Argo workflow converter

--- a/openbio-env/Dockerfile
+++ b/openbio-env/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:18.04
 
 RUN apt-get update -y
+RUN apt-get install -y curl
+
 RUN mkdir -p /openbio/work /openbio/tool /openbio/data
 
 ENV OBC_WORK_PATH=/openbio/work
@@ -8,5 +10,3 @@ ENV OBC_TOOL_PATH=/openbio/tools
 ENV OBC_DATA_PATH=/openbio/data
 
 WORKDIR /root
-COPY run.sh /root/
-CMD ["./run.sh"]
